manifests/default/admissionregistration.k8s.io_v1_mutatingwebhookconfiguration_tortoise-mutating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: tortoise-system/tortoise-serving-cert
  name: tortoise-mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: tortoise-webhook-service
      namespace: tortoise-system
      path: /mutate-autoscaling-mercari-com-v1beta3-tortoise
  failurePolicy: Fail
  name: mtortoise.kb.io
  rules:
  - apiGroups:
    - autoscaling.mercari.com
    apiVersions:
    - v1beta3
    operations:
    - CREATE
    - UPDATE
    resources:
    - tortoises
  namespaceSelector:
    matchExpressions:
      - key: kubernetes.io/metadata.name
        operator: NotIn
        values:
          - kube-system
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: tortoise-webhook-service
      namespace: tortoise-system
      path: /mutate-autoscaling-v2-horizontalpodautoscaler
  failurePolicy: Fail
  name: mhorizontalpodautoscaler.kb.io
  rules:
  - apiGroups:
    - autoscaling
    apiVersions:
    - v2
    operations:
    - CREATE
    - UPDATE
    resources:
    - horizontalpodautoscalers
  namespaceSelector:
    matchExpressions:
      - key: kubernetes.io/metadata.name
        operator: NotIn
        values:
          - kube-system
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: tortoise-webhook-service
      namespace: tortoise-system
      path: /mutate--v1-pod
  failurePolicy: Ignore
  name: mpod.kb.io
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - pods
  namespaceSelector:
    matchExpressions:
      - key: kubernetes.io/metadata.name
        operator: NotIn
        values:
          - kube-system
  sideEffects: None
